--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: android
 android:
   components:
     - build-tools-23.0.1
+    - build-tools-22.0.1
     - android-23
+    - android-22
     - sys-img-x86-android-23
 before_script:
   - git clone https://android.googlesource.com/platform/frameworks/volley library/volley
