--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: android
 android:
   components:
+    - platform-tools
+    - tools
     - build-tools-23.0.1
     - build-tools-22.0.1
     - android-23
