--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,10 @@ android {
     compileSdkVersion 23
     buildToolsVersion '23.0.1'
 
+    lintOptions {
+        abortOnError false
+    }
+
     defaultConfig {
         applicationId "com.joao29a.quote"
         minSdkVersion 15
