--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,5 @@ android:
     - sys-img-x86-android-23
 before_script:
   - git clone https://android.googlesource.com/platform/frameworks/volley library/volley
+  - rm library/volley/src/test -r
   - mv library/volley-gradle/* library/volley/
